--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -17,5 +17,7 @@
     margin-top: 30vh;
     font-size: 20rem;
     color: $color-grey-1;
+    z-index: 6;
+    position: relative;
   }
 }
